minimal-ingress/kustomize/istio-with-hostname/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: minimal-route
spec:
  parentRefs:
  - name: minimal-gateway
  hostnames: ["minimal.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /minimal
    backendRefs:
    - name: go-api-service
      port: 9000
